syntax = "proto3";

package admin;
option go_package = "github.com/pachyderm/pachyderm/src/client/admin";

import "google/protobuf/empty.proto";
import "gogoproto/gogo.proto";
import "client/admin/v1_7/pfs/pfs.proto";
import "client/admin/v1_7/pps/pps.proto";
import "client/admin/v1_8/pfs/pfs.proto";
import "client/admin/v1_8/pps/pps.proto";
import "client/admin/v1_9/pfs/pfs.proto";
import "client/admin/v1_9/pps/pps.proto";
import "client/admin/v1_10/pfs/pfs.proto";
import "client/admin/v1_10/pps/pps.proto";
import "client/admin/v1_11/pfs/pfs.proto";
import "client/admin/v1_11/pps/pps.proto";
import "client/admin/v1_11/auth/auth.proto";
import "client/admin/v1_11/enterprise/enterprise.proto";
import "client/pfs/pfs.proto";
import "client/pps/pps.proto";
import "client/auth/auth.proto";
import "client/enterprise/enterprise.proto";

// CheckAuthToken is the first message in an extract on a cluster
// where auth is enabled. It ensures the calling context contains 
// an auth token.
message CheckAuthToken {}

message Op1_7 {
  pfs_1_7.PutObjectRequest object = 2;
  pfs_1_7.TagObjectRequest tag = 3;
  pfs_1_7.CreateRepoRequest repo = 4;
  pfs_1_7.BuildCommitRequest commit = 5;
  pfs_1_7.CreateBranchRequest branch = 6;
  pps_1_7.CreatePipelineRequest pipeline = 7;
}

message Op1_8 {
  pfs_1_8.PutObjectRequest object = 2;
  pfs_1_8.TagObjectRequest tag = 3;
  pfs_1_8.CreateRepoRequest repo = 4;
  pfs_1_8.BuildCommitRequest commit = 5;
  pfs_1_8.CreateBranchRequest branch = 6;
  pps_1_8.CreatePipelineRequest pipeline = 7;
}

message Op1_9 {
  pfs_1_9.PutObjectRequest object = 2;
  pfs_1_9.CreateObjectRequest create_object = 9;
  pfs_1_9.TagObjectRequest tag = 3;
  pfs_1_9.PutBlockRequest block = 10;
  pfs_1_9.CreateRepoRequest repo = 4;
  pfs_1_9.BuildCommitRequest commit = 5;
  pfs_1_9.CreateBranchRequest branch = 6;
  pps_1_9.CreatePipelineRequest pipeline = 7;
  pps_1_9.CreateJobRequest job = 8;
}

message Op1_10 {
  pfs_1_10.PutObjectRequest object = 2;
  pfs_1_10.CreateObjectRequest create_object = 9;
  pfs_1_10.TagObjectRequest tag = 3;
  pfs_1_10.PutBlockRequest block = 10;
  pfs_1_10.CreateRepoRequest repo = 4;
  pfs_1_10.BuildCommitRequest commit = 5;
  pfs_1_10.CreateBranchRequest branch = 6;
  pps_1_10.CreatePipelineRequest pipeline = 7;
  pps_1_10.CreateJobRequest job = 8;
}


message Op1_11 {
  pfs_1_11.PutObjectRequest object = 2;
  pfs_1_11.CreateObjectRequest create_object = 9;
  pfs_1_11.TagObjectRequest tag = 3;
  pfs_1_11.PutBlockRequest block = 10;
  pfs_1_11.CreateRepoRequest repo = 4;
  pfs_1_11.BuildCommitRequest commit = 5;
  pfs_1_11.CreateBranchRequest branch = 6;
  pps_1_11.CreatePipelineRequest pipeline = 7;
  pps_1_11.CreateJobRequest job = 8;
  auth_1_11.SetACLRequest set_acl = 11;
  auth_1_11.ModifyClusterRoleBindingRequest set_cluster_role_binding = 12;
  auth_1_11.SetConfigurationRequest set_auth_config = 13;
  auth_1_11.ActivateRequest activate_auth = 14;
  auth_1_11.RestoreAuthTokenRequest restore_auth_token = 15;
  enterprise_1_11.ActivateRequest activate_enterprise = 16;
  CheckAuthToken check_auth_token = 17;
}

message Op1_12 {
  pfs.PutObjectRequest object = 2;
  pfs.CreateObjectRequest create_object = 9;
  pfs.TagObjectRequest tag = 3;
  pfs.PutBlockRequest block = 10;
  pfs.CreateRepoRequest repo = 4;
  pfs.BuildCommitRequest commit = 5;
  pfs.CreateBranchRequest branch = 6;
  pps.CreatePipelineRequest pipeline = 7;
  pps.CreateJobRequest job = 8;
  auth.SetACLRequest set_acl = 11;
  auth.ModifyClusterRoleBindingRequest set_cluster_role_binding = 12;
  auth.SetConfigurationRequest set_auth_config = 13;
  auth.ActivateRequest activate_auth = 14;
  auth.RestoreAuthTokenRequest restore_auth_token = 15;
  enterprise.ActivateRequest activate_enterprise = 16;
  CheckAuthToken check_auth_token = 17;
}

// Op represents a union of types, where each type is data extracted from
// a different major version of Pachyderm. The versioned Op types represent
// a union of the RPC types that need to be replayed to restore the cluster.
message Op {
  Op1_7 op1_7 = 1;
  Op1_8 op1_8 = 2;
  Op1_9 op1_9 = 3;
  Op1_10 op1_10 = 4;
  Op1_11 op1_11 = 5;
  Op1_12 op1_12 = 6;
}

message ExtractRequest {
  // URL is an object storage URL, if it's not "" data will be extracted to
  // this URL rather than returned.
  string URL = 1;
  // NoObjects, if true, will cause extract to omit objects (and tags)
  bool no_objects = 2;
  // NoRepos, if true, will cause extract to omit repos, commits and branches.
  bool no_repos = 3;
  // NoPipelines, if true, will cause extract to omit pipelines.
  bool no_pipelines = 4;
  // NoEnterprise, if true, causes extract to omit the enterprise activation code 
  bool no_enterprise = 5;
  // NoAuth, if true, causes extract to omit ACLs and robot tokens
  bool no_auth = 6;
}

message ExtractPipelineRequest {
  pps.Pipeline pipeline = 1;
}

message RestoreRequest {
    Op op = 1;
    // URL is an object storage URL, if it's not "" data will be restored from
    // this URL.
    string URL = 2;
}

message ClusterInfo {
  string id = 1 [(gogoproto.customname) = "ID"];
  string deployment_id = 2 [(gogoproto.customname) = "DeploymentID"];
}

service API {
  rpc Extract(ExtractRequest) returns (stream Op) {}
  rpc ExtractPipeline(ExtractPipelineRequest) returns (Op) {}
  rpc Restore(stream RestoreRequest) returns (google.protobuf.Empty) {}
  rpc InspectCluster(google.protobuf.Empty) returns (ClusterInfo) {}
}
